test/modules/standard/Random/stonea/fillRandom.good
fillRandom.chpl:3: error: symbols in module 'Random' must be visible at point of module access
fillRandom.chpl:4: error: symbols in module 'Random' must be visible at point of module access
